Fix horizontal scrolling of codeblocks

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -205,10 +205,13 @@ header {
 	}
 }
 
+.content {
+	flex: 1;
+}
+
 .container {
 	max-width: 1280px;
 	margin: auto;
-	flex: 1;
 	background-color: rgba(10, 10, 10, 0.97);
 	padding: 20px;
 }
